--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "author": "Chandan Kumar",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2"
   },
   "scripts": {
     "start": "nodemon ./"
