--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^0.13.2"
+    "graphql": "^0.13.2",
+    "mongoose": "^5.1.6"
   },
   "scripts": {
     "start": "nodemon ./"
