--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "author": "Chandan Kumar",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
